Fixed bug where hero image used space behind scroll bar, creating horizontal scroll. Resolved by using 100% instead of 100vw when sizing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -467,7 +467,7 @@ form {
 
 @media only screen and (max-width: 992px) {
     .hero-image {
-        width: 100vw;
+        width: 100%;
         height: 100vh;
         border-radius: 0;
     }
